# cookiecutter-pyproject

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .travis.yml  CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst  make.bat
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
