[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[tool.setuptools-git-versioning]
enabled = true

[project]
name = '{{ cookiecutter.project_slug }}'
dynamic = ["version"]
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
{%- if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
{%- endif %}
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
{%- if cookiecutter.command_line_interface == 'Click' %}    "click==8.1.3"
{%- endif %}]
{%- if 'no' not in cookiecutter.command_line_interface|lower %}

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{%- endif %}

[tool.setuptools.package-data]
# include VERSION file to a package
my_module = ["VERSION"]
zip-safe = false

[tool.flakeheaven]
format = "grouped"
max_line_length = 90
show_source = true

[tool.flakeheaven.exceptions."tests/"]
flake8-secure-coding-standard = ["-SCS108"]

[tool.flakeheaven.plugins]
mccabe = ["+*"]
pycodestyle = ["+*"]
pylint = ["+*"]
pyflakes = ["+*"]
flake8-secure-coding-standard = ["+*"]
flake8-warnings = ["+*"]
flake8-simplify = ["+*"]
hacking-core = ["+*"]

[project.optional-dependencies]
dev = [
{% if cookiecutter.use_black == 'y' %}    "black-23.1.0"
{%- endif %}    "flakeheaven==3.2.1",
    "sphinx ~=6.1.3",
    "flake8-secure-coding-standard==1.4.0",
    "flake8-warnings==0.4.0",
    "flake8-simplify==0.19.3",
    "hacking==5.0.0",
]
test = [
    "pytest-cov ~=3.0.0",
]
